Added snake self-collision and score counter.

--- a/Snake/Snake.csproj
+++ b/Snake/Snake.csproj
@@ -25,6 +25,7 @@
     <Content Include="index.html" />
     <Content Include="scripts\Render.js" />
     <Content Include="scripts\Snake.js" />
+    <Content Include="scripts\Star.js" />
     <Content Include="scripts\Vector.js" />
     <Content Include="web.config" />
   </ItemGroup>
